# Draftly

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN.md  README.md  index.html  package-lock.json  package.json  refactor-plan.md  vite.config.js  vite.config.ts
.ai-context/: README.md  agent-instructions.md  api-and-integrations.md  architecture.md  changelog.md  code-patterns.md  context-pack.md  current-state.md  data-flow.md  decisions.md  domain-rules.md  features.md  folder-structure.md  project-overview.md  state-management.md  tech-stack.md  ui-patterns.md  update-rules.md
.github/workflows/: ci.yml  release.yml
docs/: 2026-07-08-contexts-hooks-extraction-design.md  contexts-refactor.md
samples/: JSON.json  Markdown.md  Notes.txt
screens-ui/: DESIGN.md
scripts/: generate-file-icons.py  generate-mimetype-icons.sh  release.mjs  update-draftly-linux.sh
src/: app.html  globals.d.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/deb/: postinst  postrm
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  main.tsx  setup.rs
src-tauri/src/components/editor/: EditorToolbar.tsx  MarkdownEditor.tsx
src-tauri/src/components/home/: Home.tsx
src-tauri/src/components/layout/: AppShell.tsx  FileMenu.tsx  FileTabs.tsx  StatusBar.tsx  TitleBar.tsx  WindowControls.tsx
src-tauri/src/lib/: fs.ts
src-tauri/src/state/: documentStore.ts
src-tauri/src/styles/: editor.css  globals.css  home.css  shell.css  titlebar.css
src-tauri/windows/: hooks.nsh
src/app/: App.tsx
(+145 files in other folders)
