[package]
name = "draftly"
version = "0.1.0"
description = "Draftly Markdown editor"
authors = ["Thiago Aciole"]
edition = "2021"

[lib]
name = "draftly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
comrak = "0.53.0"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-dialog = "2.3.2"
typst = "0.15.0"
typst-assets = { version = "0.15.0", features = ["fonts"] }
typst-layout = "0.15.0"
typst-pdf = "0.15.0"
